app-card  and styles added

--- a/portfolio/src/app/certificate/certificate.component.html
+++ b/portfolio/src/app/certificate/certificate.component.html
@@ -1,1 +1,35 @@
-<p>certificate works!</p>
+<div class="container">
+    <div class="row">
+        <div class="col">
+            <img src='./assets/shecodes-certificate-1.jpg' alt="photo of certificate" width=371 />
+            <a href="https://www.shecodes.io/certificates/36d546febd14c22736b99154f40621dc" class="intro"
+                target="_blank">Certificate validation</a>
+        </div>
+        <div class="col">
+            <img src='./assets/shecodes-certificate-2.jpg' alt="photo of certificate" width=346 />
+            <a href="https://www.shecodes.io/certificates/f169ec0d3f251b78e1380c8f3d454fb6" target="_blank">Certificate
+                validation</a>
+        </div>
+        <div class="col">
+            <img src='./assets/shecodes-certificate-3.jpg' alt="photo of certificate" width=350 />
+            <a href="https://www.shecodes.io/certificates/b943e6effeed196f1b133c0d8f2755b8" target="_blank">Certificate
+                validation</a>
+        </div>
+    </div>
+    <div class="row">
+        <div class="col">
+            <img src="./assets/agile.jpg" alt="photo of certificate" width=450 />
+            <a href="https://www.udemy.com/certificate/UC-ae4f2b4c-690f-450b-96ed-e07d5f3dcb3e/"
+                target="_blank">Certificate
+                validation</a>
+        </div>
+        <div class="col">
+            <img src="./assets/full-stack.jpg" alt="photo of certificate" width=450 />
+            <a href="https://www.udemy.com/certificate/UC-b2f422ee-b779-46e0-9d00-18f877884b60/"
+                target="_blank">Certificate
+                validation</a>
+        </div>
+    </div>
+</div>
+<hr />
+
