--- a/portfolio/src/app/app.component.css
+++ b/portfolio/src/app/app.component.css
@@ -6,10 +6,8 @@ h1 {
   margin: 0;
   color: rgb(70, 68, 68);
   text-align: center;
-  background-image: url("/assets/background.jpg");
-  background-repeat: no-repeat;
   opacity: 0.9;
-  color: #fff;
+  color: #000;
   font-family: "Space Mono", monospace;
   font-weight: bold;
   font-size: 48px;
