--- a/portfolio/src/app/app.component.html
+++ b/portfolio/src/app/app.component.html
@@ -25,9 +25,11 @@
 
 <router-outlet></router-outlet>
 
+<br>
+<br>
 <footer>
   <small>
-    Coded by Agata Piekarczyk - <i class="fab fa-github"></i><a href="" target="_blank"> Open Source </a> &
-    <a href="#" target="_blank"> Hosting </a>
+    Coded by Agata Piekarczyk - <i class="fab fa-github"></i><a href="https://github.com/Agata349/angular-my-portfolio" target="_blank"> Open Source </a> &
+    <a href="https://bit.ly/3f86rPg" target="_blank"> Hosting </a>
   </small>
 </footer>
