--- a/portfolio/src/app/app.component.html
+++ b/portfolio/src/app/app.component.html
@@ -1,20 +1,8 @@
 <h1 class="animate__animated animate__backInLeft">Agata's portfolio</h1>
-<div class="row">
-  <div class="col-8">
-    <h3> Hi! If you are here it means that you would like to see my projects. I'm really glad! I need to be honest
-      though.
-      Please note, that not every project below was created completely by myself.
-      I was learning from some workshops and online lessons where I could use help of experienced developers.
-      Anyway, I completed some challenges and created the below apps using my own style. Below you can also find my
-      certificates. I hope you will enjoy it!</h3>
-  </div>
-  <div class="col-4">
-    <button>
-      <a href="mailto:agata.piekarczyk90@gmail.com" id="mail-to">If you like it,<br /> please contact me </a>
-    </button>
-  </div>
-</div>
 <ul class="nav nav-tabs">
+  <li class="nav-item">
+    <a class="nav-link active" id="home" aria-current="page" routerLink="./home">Home</a>
+  </li>
   <li class="nav-item">
     <a class="nav-link active" id="apps" aria-current="page" routerLink="./my-app">My apps</a>
   </li>
@@ -25,11 +13,9 @@
 
 <router-outlet></router-outlet>
 
-<br>
-<br>
 <footer>
   <small>
     Coded by Agata Piekarczyk - <i class="fab fa-github"></i><a href="https://github.com/Agata349/angular-my-portfolio" target="_blank"> Open Source </a> &
-    <a href="https://bit.ly/3f86rPg" target="_blank"> Hosting </a>
+    <a href="https://bit.ly/3uepcF8" target="_blank"> Hosting </a>
   </small>
 </footer>
