--- a/portfolio/src/app/app.component.html
+++ b/portfolio/src/app/app.component.html
@@ -16,6 +16,6 @@
 <footer>
   <small>
     Coded by Agata Piekarczyk - <i class="fab fa-github"></i><a href="https://github.com/Agata349/angular-my-portfolio" target="_blank"> Open Source </a> &
-    <a href="https://bit.ly/3fhzLTx" target="_blank"> Hosting </a>
+    <a href="https://bit.ly/34hfKGu" target="_blank"> Hosting </a>
   </small>
 </footer>
