--- a/portfolio/src/app/app.component.html
+++ b/portfolio/src/app/app.component.html
@@ -1,13 +1,17 @@
 <h1 class="animate__animated animate__backInLeft">Agata's portfolio</h1>
 <ul class="nav nav-tabs">
   <li class="nav-item">
-    <a class="nav-link active" id="home" aria-current="page" routerLink="./home">Home</a>
+    <a class="nav-link" id="home" aria-current="page" routerLink="./home">Home</a>
   </li>
   <li class="nav-item">
-    <a class="nav-link active" id="apps" aria-current="page" routerLink="./my-app">My apps</a>
+    <a class="nav-link" id="apps" aria-current="page" routerLink="./my-app">My apps</a>
   </li>
   <li class="nav-item">
     <a class="nav-link" id="certificates" routerLink="./certificate">Certificates</a>
+  </li>
+  <li class="nav-item">
+    <a class="nav-link" id="social-media" routerLink="./social-media"><i class="fab fa-github"></i> & <i class="fab fa-linkedin"></i>
+    </a>
   </li>
 </ul>
 
@@ -15,7 +19,6 @@
 
 <footer>
   <small>
-    Coded by Agata Piekarczyk - <i class="fab fa-github"></i><a href="https://github.com/Agata349/angular-my-portfolio" target="_blank"> Open Source </a> &
-    <a href="https://my-portfolio-angular.netlify.app/home" target="_blank"> Hosting </a>
+    Coded by Agata Piekarczyk 
   </small>
 </footer>
