--- a/portfolio/src/app/home/home.component.html
+++ b/portfolio/src/app/home/home.component.html
@@ -1,18 +1,21 @@
 <div class="container">
-<div class="row">
-    <div class="col-8">
-        <h4> Hi! If you are here it means that you would like to see my projects. I'm really glad! I need to be honest
-            though.
-            Please note, that not every project below was created completely by myself.
-            I was learning from some workshops and online lessons where I could use help of experienced developers.
-            Anyway, I completed some challenges and created the below apps using my own style. Below you can also find
-            my
-            certificates. I hope you will enjoy it!</h4>
-    </div>
-    <div class="col-4">
-        <button>
-            <a href="mailto:agata.piekarczyk90@gmail.com" id="mail-to">If you like it,<br /> please contact me </a>
-        </button>
-    </div>
-</div>
+    <h2>
+        Hi! If you are here it means that you would like to see my projects. I'm really glad! I need to be honest
+        though.
+        Please note, that not every project was created completely by myself.
+        I was learning from some workshops and online lessons where I could use help of experienced developers.
+        Anyway, I completed some challenges and created the below apps using my own style. You can also find here
+        my certificates. I hope you will enjoy it. 
+        <br />
+        <br />
+        If you like it, please <a href="mailto:agata.piekarczyk90@gmail.com">
+            contact me</a>!
+        <br />
+        <br />
+        Feel free to visit my profile on:
+        <br />
+        <br />
+            <a href="https://github.com/Agata349" class="social-media" target="_blank">GitHub</a> or
+            <a href="https://www.linkedin.com/in/agata-piekarczyk-8a5052172/" class="social-media" target="_blank">LinkedIn</a>
+        </h2>
 </div>
