--- a/portfolio/src/app/app.component.css
+++ b/portfolio/src/app/app.component.css
@@ -1,40 +1,13 @@
 @import url("https://fonts.googleapis.com/css2?family=Inconsolata:wght@300&display=swap");
-@import url("https://fonts.googleapis.com/css2?family=Space+Mono:wght@700&display=swap");
-
-h1 {
-  padding: 27px;
-  margin: 5px;
-  color: rgb(70, 68, 68);
-  text-align: center;
-  opacity: 0.9;
-  color: #000;
-  font-family: "Space Mono", monospace;
-  font-weight: bold;
-  font-size: 48px;
-}
-
-#home,
-#certificates,
-#apps,
-#social-media {
-  background-image: url("/assets/background.jpg");
-  color: #fff;
-  padding: 25px;
-  font-size: 18px;
-  font-family: "Inconsolata", monospace;
-  font-weight: bold;
-}
 
 footer {
-  text-align: center;
+  clear: both;
+  position: sticky;
+  bottom: 0;
+  width: 100%;
+  padding: 8px 15px;
   font-family: "Inconsolata", monospace;
-  font-weight: 700;
-  padding: 15px;
+  font-weight: bold;
   background-image: url("/assets/background.jpg");
-  color: #fff;
-}
-
-a {
-  color: #275171;
-  font-family: "Space Mono", monospace;
+  color: #000;
 }
