--- a/portfolio/src/app/app.component.html
+++ b/portfolio/src/app/app.component.html
@@ -1,24 +1,13 @@
-<h1 class="animate__animated animate__backInLeft">Agata's portfolio</h1>
-<ul class="nav nav-tabs">
-  <li class="nav-item">
-    <a class="nav-link" id="home" aria-current="page" routerLink="./home">Home</a>
-  </li>
-  <li class="nav-item">
-    <a class="nav-link" id="apps" aria-current="page" routerLink="./my-app">My apps</a>
-  </li>
-  <li class="nav-item">
-    <a class="nav-link" id="certificates" routerLink="./certificate">Certificates</a>
-  </li>
-  <li class="nav-item">
-    <a class="nav-link" id="social-media" routerLink="./social-media"><i class="fab fa-github"></i> & <i class="fab fa-linkedin"></i>
-    </a>
-  </li>
-</ul>
+<app-main-nav>
 
 <router-outlet></router-outlet>
 
 <footer>
   <small>
-    Coded by Agata Piekarczyk 
+    Coded by Agata Piekarczyk
   </small>
 </footer>
+
+</app-main-nav>
+
+
