--- a/portfolio/src/app/home/home.component.css
+++ b/portfolio/src/app/home/home.component.css
@@ -1,32 +1,28 @@
-h4 {
-  margin-top: 20px;
+@import url("https://fonts.googleapis.com/css2?family=Inconsolata:wght@300&display=swap");
+
+.container {
+  min-height: 100%;
+  display: grid;
+  grid-template-rows: auto 1fr auto;
+  grid-template-columns: 100%;
+}
+
+h2,
+h3 {
   padding: 30px;
-  text-align: justify;
+  text-align: center;
   font-family: "Inconsolata", monospace;
-  font-weight: 800;
-  line-height: 1.5;
+  font-weight: bold;
+  color: #000;
 }
 
-button {
-  display: block;
-  margin: 130px auto;
-  padding: 15px 25px;
-  font-size: 20px;
-  font-family: "Inconsolata", monospace;
-  border: none;
-  box-shadow: 5px 5px 5px rgba(165, 157, 157, 0.15);
-  border-radius: 15px;
-  background-image: url("/assets/background-button.jpg");
-}
+a {
+  padding: 15px;
+  border-radius: 4px;
+  background: #3e5151;
+  background: -webkit-linear-gradient(to right, #decba4, #3e5151);
+  background: linear-gradient(to right, #decba4, #3e5151);
 
-button:hover {
-  cursor: pointer;
-  opacity: 0.8;
-  border: none;
-}
-
-#mail-to {
-  color: #fff;
+  color: #000;
   text-decoration: none;
-  line-height: 1.5;
 }
