--- a/portfolio/src/app/my-app/app-card/app-card.component.css
+++ b/portfolio/src/app/my-app/app-card/app-card.component.css
@@ -5,12 +5,12 @@
 }
 
 img {
-  margin-top: 25px;
+  margin-top: 35px;
   margin-bottom: 15px;
 }
 
 p {
-  color: rgb(70, 68, 68);
+  color: #000;
   font-family: "Space Mono", monospace;
 }
 
