--- a/portfolio/src/app/certificate/certificate.component.css
+++ b/portfolio/src/app/certificate/certificate.component.css
@@ -1,3 +1,5 @@
+@import url("https://fonts.googleapis.com/css2?family=Handlee&display=swap");
+
 .container {
   min-height: 100%;
   display: grid;
@@ -6,15 +8,16 @@
 }
 
 .col {
-  margin-top: 55px;
+  margin-top: 35px;
   text-align: center;
 }
 
 a {
   display: block;
   margin: 0 auto;
-  color: grey;
   text-decoration: none;
+  color: #000;
+  font-family: "Handlee", cursive;
 }
 
 img {
