--- a/portfolio/src/app/main-nav/main-nav.component.css
+++ b/portfolio/src/app/main-nav/main-nav.component.css
@@ -1,13 +1,15 @@
+@import url("https://fonts.googleapis.com/css2?family=Satisfy&display=swap");
+
 .sidenav-container {
   height: 100%;
-  background-image: url("/assets/background.jpg");
+  background-color: #fff;
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
 }
 
 .sidenav {
-  width: 150px;
+  width: 130px;
   background-image: url("/assets/background.jpg");
 }
 
@@ -22,12 +24,14 @@
   background-image: url("/assets/background.jpg");
   padding: 20px;
   color: #000;
+  font-size: 24px;
+  font-family: "Satisfy", cursive;
 }
 
 span {
+  margin: 0 auto;
   color: #000;
-  font-family: "Space Mono", monospace;
-  font-weight: bold;
+  font-family: "Satisfy", cursive;
   font-size: 38px;
 }
 
@@ -36,8 +40,8 @@ span {
 #apps {
   background-image: url("/assets/background.jpg");
   color: #000;
-  font-family: "Inconsolata", monospace;
-  font-weight: bold;
+  font-family: "Satisfy", cursive;
+  font-size: 22px;
 }
 
 i {
